src/versions: add less

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zlib
+targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -32,6 +32,10 @@ sources=flex.c
 [heimdal]
 type=binary
 sources=heimdal.c
+
+[less]
+type=binary
+sources=less.c
 
 [libarchive]
 type=binary
@@ -99,6 +103,6 @@ sources=zlib.c
 
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zlib) > versions.yml
+command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zlib) > versions.yml
 depends=all
 enabled=0
