src/versions: add llvm

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zlib
+targets=awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -82,6 +82,10 @@ sources=libpcap.c
 [libxo]
 type=binary
 sources=libxo.c
+
+[llvm]
+type=binary
+sources=llvm.c
 
 [ncurses]
 type=binary
