zfs/versions: add zfs

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zlib
+targets=awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zfs,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -109,12 +109,16 @@ sources=sqlite.c
 type=binary
 sources=tcpdump.c
 
+[versions.yml]
+type=command
+command=(./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zfs; ./zlib) > versions.yml
+depends=all
+enabled=0
+
+[zfs]
+type=binary
+sources=zfs.c
+
 [zlib]
 type=binary
 sources=zlib.c
-
-[versions.yml]
-type=command
-command=(./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zlib) > versions.yml
-depends=all
-enabled=0
