src/versions: add acpi

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,9 +1,13 @@
-targets=awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zfs,zlib
+targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zfs,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
 
 #targets
+[acpi]
+type=binary
+sources=acpi.c
+
 [awk]
 type=binary
 sources=awk.c
@@ -111,7 +115,7 @@ sources=tcpdump.c
 
 [versions.yml]
 type=command
-command=(./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zfs; ./zlib) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zfs; ./zlib) > versions.yml
 depends=all
 enabled=0
 
