--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zfs,zlib
+targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,pkg,sqlite,tcpdump,versions.yml,zfs,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -104,6 +104,10 @@ sources=openssl.c
 type=binary
 sources=patch.c
 
+[pkg]
+type=binary
+sources=pkg.c
+
 [sqlite]
 type=binary
 cflags=-isystem /usr/include/private/sqlite3
@@ -115,7 +119,7 @@ sources=tcpdump.c
 
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zfs; ./zlib) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./zfs; ./zlib) > versions.yml
 depends=all
 enabled=0
 
