src/versions: add unifdef

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,pkg,sqlite,tcpdump,versions.yml,zfs,zlib
+targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,ncurses,openssl,patch,pkg,sqlite,tcpdump,unifdef,versions.yml,zfs,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -117,9 +117,13 @@ sources=sqlite.c
 type=binary
 sources=tcpdump.c
 
+[unifdef]
+type=binary
+sources=unifdef.c
+
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./zfs; ./zlib) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./unifdef; ./zfs; ./zlib) > versions.yml
 depends=all
 enabled=0
 
