src/versions: add ipfilter

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sqlite,tcpdump,unifdef,versions.yml,zfs,zlib
+targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,ipfilter,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sqlite,tcpdump,unifdef,versions.yml,zfs,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -44,6 +44,10 @@ sources=flex.c
 [heimdal]
 type=binary
 sources=heimdal.c
+
+[ipfilter]
+type=binary
+sources=ipfilter.c
 
 [less]
 type=binary
@@ -131,7 +135,7 @@ sources=unifdef.c
 
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./unifdef; ./zfs; ./zlib) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./unifdef; ./zfs; ./zlib) > versions.yml
 depends=all
 enabled=0
 
